# Scraping-from-DDG

./: README.md  pyproject.toml  scrap.py
